datamodel/objects/Movie__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Movies</relationshipLabel>
    <relationshipName>Movies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>