datamodel/objects/Movie__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <label>Director</label>
    <length>60</length>
    <type>Text</type>
</CustomField>